--- a/app/globals.css
+++ b/app/globals.css
@@ -28,8 +28,28 @@
 
 @layer utilities {
   /* ===== UTILITIES */
-  .sidebar {
+  /* .sidebar {
     @apply remove-scrollbar w-full max-w-72 flex-col overflow-auto bg-black-800 px-7 py-10;
+  } */
+
+  .sidebar {
+    @apply sticky left-0 top-0 flex h-screen w-fit flex-col justify-between border-r border-dark-400 bg-dark-200 pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
+  }
+
+  .sidebar-logo {
+    @apply 2xl:text-26 text-[26px] font-bold text-white max-xl:hidden;
+  }
+
+  .sidebar-link {
+    @apply flex gap-3 items-center py-1 md:p-3 2xl:p-4 rounded-lg justify-center xl:justify-start;
+  }
+
+  .sidebar-label {
+    @apply text-16 font-semibold text-white max-xl:hidden;
+  }
+
+  .root-layout {
+    @apply sticky top-0 z-50 bg-dark-200 border-b border-gray-700 flex items-center justify-between p-4 md:hidden;
   }
 
   .left-sidebar {
@@ -38,6 +58,14 @@
 
   .right-sidebar {
     @apply hidden xl:flex;
+  }
+
+  .mobilenav-sheet {
+    @apply flex h-[calc(100vh-72px)] flex-col justify-between overflow-y-auto;
+  }
+
+  .mobilenav-sheet_close {
+    @apply flex gap-3 items-center p-4 rounded-lg w-full max-w-60;
   }
 
   .clip-text {
@@ -87,7 +115,7 @@
   }
 
   .admin-main {
-    @apply flex flex-col items-center space-y-6 px-[5%] pb-12 xl:space-y-12 xl:px-12;
+    @apply flex flex-col items-center space-y-6 px-[5%] mt-12 pb-12 xl:space-y-12 xl:px-12;
   }
 
   .admin-stat {
@@ -153,12 +181,20 @@
     @apply text-[32px] leading-[36px] font-bold;
   }
 
+  .text-26 {
+    @apply text-[26px] leading-[32px];
+  }
+
   .text-18-bold {
     @apply text-[18px] leading-[24px] font-bold;
   }
 
   .text-16-semibold {
     @apply text-[16px] leading-[20px] font-semibold;
+  }
+
+  .text-16 {
+    @apply text-[16px] leading-[24px];
   }
 
   .text-16-regular {
