--- a/app/globals.css
+++ b/app/globals.css
@@ -313,6 +313,11 @@
   }
 }
 
+/* =====  SearchBar */
+.searchBar {
+  @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 h-11 focus-visible:ring-0 focus-visible:ring-offset-0 !important;
+}
+
 /* =====  REACT-DATEPICKER OVERRIDES */
 .react-datepicker-wrapper.date-picker {
   display: flex;
