--- a/app/globals.css
+++ b/app/globals.css
@@ -118,6 +118,10 @@
     @apply flex flex-col items-center space-y-6 px-[5%] mt-12 pb-12 xl:space-y-12 xl:px-12;
   }
 
+  .admin-main-costum {
+    @apply flex flex-col items-start space-y-6 px-[5%] mt-12 pb-12 xl:space-y-12 xl:px-12;
+  }
+
   .admin-stat {
     @apply flex w-full flex-col justify-between gap-5 sm:flex-row xl:gap-10;
   }
@@ -393,4 +397,50 @@
 
 .PhoneInputInput::placeholder {
   color: #1a1d21;
+}
+
+.breadcrumb-modern {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start !important;
+  font-size: 1rem;
+  color: #4a4a4a;
+}
+
+.breadcrumb-list-modern {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.breadcrumb-item-modern {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumb-link-modern {
+  display: flex;
+  align-items: center;
+  color: #0070f3;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
+
+.breadcrumb-link-modern:hover {
+  color: #005bb5;
+}
+
+.breadcrumb-icon {
+  margin-right: 0.5rem;
+}
+
+.breadcrumb-separator-modern {
+  margin: 0 0.5rem;
+  color: #b0b0b0;
+}
+
+.breadcrumb-page-modern {
+  color: grey;
 }
